chore: fix various layout problems (#37983)
Fix various misaligments, fix space between list item bar items, remove
deadcode (milestone dashboard)

--- a/web_src/css/repo/issue-list.css
+++ b/web_src/css/repo/issue-list.css
@@ -34,14 +34,6 @@
   }
 }
 
-#issue-list .issue-item-title {
-  font-size: 16px;
-  font-weight: var(--font-weight-semibold);
-  color: var(--color-text);
-  text-decoration: none;
-  overflow-wrap: anywhere;
-}
-
 #issue-list .branches {
   display: inline-flex;
 }
@@ -105,4 +97,34 @@
 .title-full-link-hover:not(:has(:not(.title-full-link):hover)):hover > a.title-full-link {
   color: var(--color-primary);
   text-decoration: underline;
+}
+
+.list-item-large-title {
+  font-size: 16px;
+  font-weight: var(--font-weight-semibold);
+  color: var(--color-text);
+  text-decoration: none;
+  overflow-wrap: anywhere;
+}
+
+.list-item-title-progress {
+  width: 200px;
+  height: 16px;
+}
+
+.list-item-secondary-bar {
+  display: flex;
+  flex-wrap: wrap;
+  gap: var(--gap-block);
+  justify-content: space-between;
+  color: var(--color-text-light-2);
+}
+
+.list-item-secondary-bar a {
+  color: var(--color-text-light-2);
+  text-decoration: none;
+}
+
+.list-item-secondary-bar a:hover {
+  color: var(--color-text);
 }
